@@ -1,4 +1,5 @@
 
+  * Fixed drop files after any element in the player playlist
   * Added option in Album list box to select a cover file from disk
   * Fixed the amazon cover download
   * In Player Playlist selection is cancelled when new playlist is set
